--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: node_js
-
+cache:
+  directories:
+    - node_modules
 node_js:
   - '7'
   - '6'
-
 before_script:
-  - 'npm install'
-
+  - npm install
 script:
-  - 'npm test'
-
-after_script:
-  - 'cat coverage/lcov.info | ./node_modules/.bin/coveralls'
+  - npm run lint:test:cover
+after_success:
+  - npm run semantic-release
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
