--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "microservice-info",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "Returns info relevant to use a service in armand1m/microservices project.",
   "license": "MIT",
   "repository": "armand1m/microservice-info",
@@ -17,7 +17,8 @@
     "test:cover": "nyc ava",
     "lint:test:cover": "xo && nyc ava",
     "lint": "xo",
-    "lint:fix": "xo --fix"
+    "lint:fix": "xo --fix",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "files": [
     "index.js"
@@ -32,7 +33,8 @@
     "ava": "^0.17.0",
     "coveralls": "^2.11.12",
     "nyc": "^10.0.0",
-    "xo": "^0.17.0"
+    "xo": "^0.17.0",
+    "semantic-release": "^6.3.2"
   },
   "nyc": {
     "reporter": [
