--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "get-tagged-prefix.js"
   ],
   "keywords": [
     ""
